--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,21 @@
 {
   "manifest_version": 3,
   "name": "LinkPost - Raccourci Posts Programmés",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Accédez à vos posts LinkedIn programmés en un clic depuis votre fil d'actualité.",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
+  },
+  "permissions": ["storage"],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
   },
   "content_scripts": [
     {
