--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,16 @@
 {
   "manifest_version": 3,
   "name": "LinkPost - Raccourci Posts Programmés et plus",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Raccourcis vers vos posts programmés, création rapide et interface épurée pour LinkedIn.",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "permissions": ["storage"],
+  "permissions": [
+    "storage"
+  ],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -19,8 +21,12 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://www.linkedin.com/feed/*"],
-      "js": ["content.js"],
+      "matches": [
+        "https://www.linkedin.com/feed/*"
+      ],
+      "js": [
+        "content.js"
+      ],
       "run_at": "document_idle"
     }
   ]
